Update with latest code/shuqairi

--- a/TrainTracker.API/appsettings.json
+++ b/TrainTracker.API/appsettings.json
@@ -4,6 +4,13 @@
     "APIConnection": "Data Source=(DESCRIPTION =(ADDRESS = (PROTOCOL = TCP)(HOST =localhost)(PORT = 1521))(CONNECT_DATA =(SERVER = DEDICATED)(SERVICE_NAME = xe)));User Id=c##omarshuqairi5;Password=Test321;Persist Security Info=True;"
   },
 
+  "EmailSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "emailgym462@gmail.com",
+    "Password": "ftpn fltl owgo wusg",
+    "FromEmail": "emailgym462@gmail.com"
+  },
 
   "Logging": {
     "LogLevel": {
